# Clyde-Backend

./: .gitignore  .mcp.json  frontend.md  pyproject.toml  restart  run
.claude/: CLAUDE.md  settings.json
.claude/hooks/: gate-py-edits.py  mark-write-python.py  pyright-check.py
clyde/: mcp_app.py  server.py
clyde/api/: __init__.py  fire_event.py  list_events.py  list_lights.py  list_rooms.py  list_routines.py  mini_party.py  remove_schedule.py  room_off.py  set_routine.py  status.py  stop_routine.py
clyde/auth/: __init__.py  authorize.py  config.py  google.py  middleware.py  oauth_metadata.py  token.py  token_cache.py
clyde/events/: __init__.py  types.py
clyde/managers/: __init__.py  engine.py  room_manager.py
clyde/realtime/: __init__.py  bus.py  endpoint.py  messages.py
clyde/routines/: __init__.py  engine.py  jitter.py  manager.py  party.py  rainbow.py  transitional_palette.py  types.py
clyde/scheduler/: __init__.py  scheduler.py  store.py  types.py
clyde/spotify/: __init__.py  client.py  config.py  parse.py  types.py
clyde/state/: __init__.py  store.py  types.py
clyde/tools/: __init__.py  add_schedule.py  fire_event.py  light_off.py  light_on.py  light_state.py  list_events.py  list_lights.py  list_media_players.py  list_rooms.py  list_routines.py  list_schedules.py  media_player_helpers.py  media_player_play_media.py  media_player_select_source.py  media_player_state.py  media_player_transport.py  media_player_volume.py  remove_schedule.py  (+5 more)
docs/: README.md  events.md  media_players.md  routines.md
scripts/: rainbow.py  strobe.py
(+59 files in other folders)
